--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Jobseekers connect</title>
+    <link rel="icon" type="image/x-icon" href="https://www.shutterstock.com/shutterstock/photos/2640118133/display_1500/stock-vector-employment-icon-in-line-design-employment-job-hiring-recruitment-resume-interview-career-on-2640118133.jpg" />
   </head>
   <body>
     <div id="root"></div>
